Be robust against extraneous signal emissions

It seems that we are occasionally get duplicate ClutterTimeline::completed
emissions. Make the code robust against that.

https://bugzilla.gnome.org/show_bug.cgi?id=677946